Add prometheus metrics to python server. (#821)
* Update pipenv lock files.

* Add option global.metrics to turn on/off prometheus metrics.

* Add prometheus-client to pipenv

* Add prometheus-client code to streamlit.

* Create wrapper to disable monitoring via config system.

* Add metrics unittest.

```
$ pytest -v -l --cov=streamlit.metrics --cov-report=term-missing tests/streamlit/metrics_test.py
====================================== test session starts =======================================
platform darwin -- Python 3.7.3, pytest-4.6.3, py-1.8.0, pluggy-0.12.0 -- /Users/armando/.pyenv/versions/3.7.3/envs/st-3.7.3/bin/python
cachedir: .pytest_cache
rootdir: /Users/armando/st/aaj-st/lib
plugins: cov-2.7.1
collected 7 items

tests/streamlit/metrics_test.py::MetricsTest::test_constructor PASSED                      [ 14%]
tests/streamlit/metrics_test.py::MetricsTest::test_disabled_metrics PASSED                 [ 28%]
tests/streamlit/metrics_test.py::MetricsTest::test_disabled_metrics_check_values PASSED    [ 42%]
tests/streamlit/metrics_test.py::MetricsTest::test_enabled_metrics PASSED                  [ 57%]
tests/streamlit/metrics_test.py::MetricsTest::test_enabled_metrics_no_prometheus PASSED    [ 71%]
tests/streamlit/metrics_test.py::MetricsTest::test_get_current PASSED                      [ 85%]
tests/streamlit/metrics_test.py::MetricsTest::test_not_singleton PASSED                    [100%]

---------- coverage: platform darwin, python 3.7.3-final-0 -----------
Name                   Stmts   Miss  Cover   Missing
----------------------------------------------------
streamlit/metrics.py      46      0   100%

==================================== 7 passed in 0.11 seconds ====================================
```

* Yapf/Lint

--- a/lib/Pipfile.locks/python-3.7.3
+++ b/lib/Pipfile.locks/python-3.7.3
@@ -1,7 +1,7 @@
 {
     "_meta": {
         "hash": {
-            "sha256": "58a00cc40b48f59650d05536c702646604485582c78e9faf533aed2479cca082"
+            "sha256": "8b121128db005e29243526bcc7787f433c404d75ad41f997a94b4f76bde9846e"
         },
         "pipfile-spec": 6,
         "requires": {},
@@ -48,19 +48,19 @@
         },
         "boto3": {
             "hashes": [
-                "sha256:2149b6b617783bac1cf2a3d009949be6356d62a6c1e9f2ac77e6c861ce6548de",
-                "sha256:31a887919f58a75c37daba8e46f7bcf4481e1be6935ce006fe7595a1084b5938"
+                "sha256:69c1e6e000e0210b5c64e3858a3f0ae766c89e0c3bdd1c71f706652ce9232c26",
+                "sha256:eb46be008784ad87b061af01d05d480658ab0fcf8199add7aff53b486f30e7bf"
             ],
             "index": "pypi",
-            "version": "==1.9.183"
+            "version": "==1.9.184"
         },
         "botocore": {
             "hashes": [
-                "sha256:2943d87d6844813fff9b0b4e9d9fef223d5e211bd69235b650b2d65137f816b0",
-                "sha256:d4b280e7c312ffecda0f2519d8e41b69860eb5d72e8d737e7e3814a5153190c6"
+                "sha256:0c6746148ac2c1842e5f0aca4fa542c8696856a3ece83ad9a30331f60a71de3a",
+                "sha256:83faaa9c83f6828e10c507927dc0fe421e4f05309a4a3fe3ccd5a6203a2f501b"
             ],
             "index": "pypi",
-            "version": "==1.12.183"
+            "version": "==1.12.184"
         },
         "click": {
             "hashes": [
@@ -483,11 +483,11 @@
         },
         "flake8": {
             "hashes": [
-                "sha256:859996073f341f2670741b51ec1e67a01da142831aa1fdc6242dbf88dffbe661",
-                "sha256:a796a115208f5c03b18f332f7c11729812c8c3ded6c46319c59b53efd3819da8"
+                "sha256:19241c1cbc971b9962473e4438a2ca19749a7dd002dd1a946eaba171b4114548",
+                "sha256:8e9dfa3cecb2400b3738a42c54c3043e821682b9c840b0448c0503f781130696"
             ],
             "index": "pypi",
-            "version": "==3.7.7"
+            "version": "==3.7.8"
         },
         "funcsigs": {
             "hashes": [
@@ -911,6 +911,13 @@
             ],
             "version": "==0.12.0"
         },
+        "prometheus-client": {
+            "hashes": [
+                "sha256:71cd24a2b3eb335cb800c7159f423df1bd4dcd5171b234be15e3f31ec9f622da"
+            ],
+            "index": "pypi",
+            "version": "==0.7.1"
+        },
         "protobuf": {
             "hashes": [
                 "sha256:03f43eac9d5b651f976e91cf46a25b75e5779d98f0f4114b0abfed83376d75f8",
@@ -980,9 +987,9 @@
         },
         "pyrsistent": {
             "hashes": [
-                "sha256:16692ee739d42cf5e39cef8d27649a8c1fdb7aa99887098f1460057c5eb75c3a"
+                "sha256:50cffebc87ca91b9d4be2dcc2e479272bcb466b5a0487b6c271f7ddea6917e14"
             ],
-            "version": "==0.15.2"
+            "version": "==0.15.3"
         },
         "pytest": {
             "hashes": [
@@ -1280,10 +1287,10 @@
         },
         "zipp": {
             "hashes": [
-                "sha256:8c1019c6aad13642199fbe458275ad6a84907634cc9f0989877ccc4a2840139d",
-                "sha256:ca943a7e809cc12257001ccfb99e3563da9af99d52f261725e96dfe0f9275bc3"
+                "sha256:4970c3758f4e89a7857a973b1e2a5d75bcdc47794442f2e2dd4fe8e0466e809a",
+                "sha256:8a5712cfd3bb4248015eb3b0b3c54a5f6ee3f2425963ef2a0125b8bc40aafaec"
             ],
-            "version": "==0.5.1"
+            "version": "==0.5.2"
         }
     }
 }
